# models/vendorModel.js
@@ -2,8 +2,15 @@ const mongoose = require("mongoose");
 const Schema = mongoose.Schema;
 
 const vendorSchema = new Schema({
-    vendorId: String
-});
+    vendorName: { type: String, required: true },
+    vendorCategory: String,
+    contactName: String,
+    contactEmail: String,
+    contactPhone: String,
+    website: String,
+    rating: Number,
+    createdAt: { type: Date, default: Date.now },
+  });
 
 const vendor = mongoose.model("vendor", vendorSchema);
 
